[package]
name = "news_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.7.0"
eframe = "0.21.3"
enum-iterator = "1.4.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
ureq = "2.6.2"
